--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,37 @@
-/*  your css code here. If applicable */
+.form-group > input {
+	width: 100%;
+	height: 26px;
+	border: 1px solid black;
+	margin-bottom: 10px;
+}
+
+#submit {
+	background-color: blue;
+	color: white;
+	padding: 8px 16px;
+	border: none;
+	cursor: pointer;
+}
+
+.delete {
+	background-color: red;
+	color: white;
+	border: none;
+	padding: 5px 10px;
+	cursor: pointer;
+}
+
+.table {
+	width: 100%;
+	border-collapse: collapse;
+}
+
+.table th, .table td {
+	border: 1px solid #ddd;
+	padding: 8px;
+	text-align: left;
+}
+
+.table th {
+	background-color: #f2f2f2;
+}
